<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/b_signUp"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_button"
        android:onClick="onClickSignUp"
        android:text="@string/Reg"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/b_signIn"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:onClick="onClickSignIn"
        android:text="@string/Enter"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/b_signUp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/b_signUp"
        app:layout_constraintTop_toBottomOf="@+id/b_signUp" />

    <TextView
        android:id="@+id/tv_userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/custom_button"
        android:onClick="onClickStart"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userEmail" />

    <Button
        android:id="@+id/b_signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/custom_button"
        android:onClick="onClickSignOut"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="@+id/b_Start"
        app:layout_constraintStart_toStartOf="@+id/b_Start"
        app:layout_constraintTop_toBottomOf="@+id/b_Start" />

</androidx.constraintlayout.widget.ConstraintLayout>