<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_timer"
        android:layout_width="171dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_button"
        android:text="@string/Timer"
        android:textColor="@color/Text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_read" />

    <Button
        android:id="@+id/button_read"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_button"
        android:text="@string/Profile"
        android:textColor="@color/Text"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b_LogOut"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_button"
        android:text="@string/logOut"
        android:textColor="@color/Text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_registration" />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_button"
        android:text="@string/Data"
        android:textColor="@color/Text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_timer" />

</androidx.constraintlayout.widget.ConstraintLayout>